<resources>
    <string name="app_name">Let\'s App Builder</string>
    <string name="login_success">Login success</string>
    <string name="login">LOGIN</string>
    <string name="Email">Email</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Portfolio">Portfolio</string>
    <string name="About">About</string>
    <string name="Contact">Contact</string>
    <string name="OurWork">Our Work</string>
    <string name="Map">Map</string>
    <string name="Chat">Chat</string>
    <string name="Share">Share</string>
    <string name="facebook_app_id" translatable="false">1602562923093064</string>
    <string name="Feedback">Feedback</string>
    <string name="QRCode">QR Code</string>
    <string name="Quiz">Quiz</string>
    <string name="Survey">Survey</string>
    <string name="Document">Document</string>
    <string name="Video">Video</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fullname">Full Name</string>
    <string name="city">Enter City</string>
    <string name="address">Living Address</string>
    <string name="faboptions_vector_overflow_path">M 6 12 L 6 12.1 M 12 12.1 L 12 12 M 18 12.1 L 18 12</string>
    <string name="faboptions_vector_close_path">M 6 6 L 18 18, M 12 12 L 12 12, M 6 18 L 18 6</string>
    <string name="chat_room_message">Enter Message</string>
    <string name="chat_room_send">Send</string>
    <string name="notify_to_customer">NOTIFY TO CUSTOMER</string>
    <string name="sendall">Send to All</string>
    <string name="send_one">Send to One</string>
    <string name="message_title">Enter Message Title</string>
    <string name="message_body">Enter Message</string>
    <string name="send">SEND</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="new_password">Enter New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="Letsapp_label">L e t \'s A p p</string>
    <string name="letsapp_label" translatable="false">L E T \'S A P P</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="email_address">Enter Email address</string>
    <string name="app_settings">App Settings</string>
    <string name="app_name_designtwo">App Name</string>
    <string name="app_theme_color">App Theme Color</string>
    <string name="text_settings">Text Settings</string>
    <string name="no_apps_available">No Apps available</string>
    <string name="create_app">CREATE  APP</string>
    <string name="no_apps">No Apps available</string>
    <string name="change_passwords">Change password ?</string>
    <string name="app_publication">APP PUBLICATION</string>
    <string name="subscribe_information">Subscribe now to get your app online. reachable by millions of users. Choose one of the subscription.</string>
    <string name="month1">Monthly Subscription</string>
    <string name="month3">3 Month Subscription</string>
    <string name="month6">6 Month Subscription</string>
    <string name="year1">Yearly Subscription</string>
    <string name="year5">5 Year Subscription</string>
    <string name="year10">10 Year Subscription</string>
    <string name="payment_successful">PAYMENT SUCCESSFUL</string>
    <string name="enter_app_name">Enter App Name</string>
    <string name="intro_skin">S K I P</string>
    <string name="skip">S K I P</string>
    <string name="about_title">About</string>
    <string name="edt1a_hint">Add Description</string>
    <string name="edt1b_hint">Enter Designation</string>
    <string name="edt1c_hint">What\'s your mission</string>
    <string name="edt1d_hint">Enter your vision</string>
    <string name="edt1e_hint">Awards description</string>
    <string name="edt1f_hint">Add your website URL</string>
    <string name="edt1g_hint">Enter your facebook page URL</string>
    <string name="edt1h_hint">Add Twitter profile URL</string>
    <string name="edt1i_hint">Add play store app URL</string>
    <string name="edt1j_hint">Add your youtube channel URL</string>
    <string name="edt1k_hint">Add Instagram page URL</string>
    <string name="edt1l_hint">Add copyright information</string>
    <string name="chat_title">Chat</string>
    <string name="contactus_title">Contact Us</string>
    <string name="edt2a_hint">Enter your name</string>
    <string name="edt2b_hint">Add calling details</string>
    <string name="edt2c_hint">Enter SMS details</string>
    <string name="edt2d_hint">Enter email address</string>
    <string name="edt2e_hint">Enter Skype Details</string>
    <string name="edt2f_hint">Enter full address</string>
    <string name="edt2g_hint">Add your website url</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="add_promotional_banner_hint">Add promotional banner</string>
    <string name="title_dealsoftheday">e.g(DEALS OF THE DAY…)</string>
    <string name="title_discountsforyou">e.g(OUR COMPANY PROVIDES…)</string>
    <string name="title_colorful_card">e.g(Our Works…)</string>
    <string name="document_title">Document</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_map">Map</string>
    <string name="colorful_title_card">Title</string>
    <string name="colorful_subtitle_card">Subtitle</string>
    <string name="card_save">save</string>
    <string name="card_main_title">Main Title</string>
    <string name="card_main_subtitle">Subtitle</string>
    <string name="ourwork_title">Our Works</string>
    <string name="edt4a_hint">Enter your works details</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_qrcode">QR Code</string>
    <string name="edt9a_hint">Enter url or detail for generating QR Code</string>
    <string name="title_share">Share</string>
    <string name="edt7a_hint">Which information would like to share?</string>
    <string name="dialog_change_password">CHANGE PASSWORD</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nave_draft">Draft Apps</string>
    <string name="nav_myapp">My Apps</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_upgrade">Upgrade Plan</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_logout">Log out</string>
    <string name="title_quiz">Quiz</string>
    <string name="quiz_hint">Add Quiz questionairy Url</string>
    <string name="title_video">Video</string>
    <string name="video_hint">Enter Youtube channel ID</string>
    <string name="title_survey">Survey</string>
    <string name="survey_hint">Add Survey taker questionairy url</string>
    <string name="qrcode_savw_notice">QR Code successfully saved to SD Card</string>
    <string name="feedback_notice">Help,Support and Feedback feature is ON</string>
    <string name="chat_feature_on">Chat feature is on for your app</string>
    <string name="chat_feature_off">Chat feature is off for your app</string>
    <string name="document_url_notice">URL is properly entered by owner, So please contact them</string>
    <string name="imagedashboardarray_minimu_notice">One image is necessary. If you don\'t want then made this feature temporary Turn off</string>
    <string name="empty_productname_notice">Product name should not be empty</string>
    <string name="empty_sellingprice_notice">Selling price shold noy be empty</string>
    <string name="empty_titlename_notice">Title name should not be empty</string>
    <string name="empty_subtitle_notice">Sub-Title name should not be empty</string>
    <string name="card_minimum_notice_adapter">Atleast one card is required</string>
    <string name="empty_doc_notice">Document name should not be empty</string>
    <string name="empty_docurl_notice">Document URL should not be empty</string>
    <string name="toolbar_notification" translatable="false">N O T I F I C A T I O N</string>
    <string name="progress_loading">Loading…</string>
    <string name="camera_dialog_take_photo">Take Photo</string>
    <string name="camera_dialog_choose_library">Choose from Library</string>
    <string name="camera_dialog_cancel">Cancel</string>
    <string name="camera_dialog_title">Add Photo!</string>
    <string name="gallery_select_file">Select File</string>
    <string name="upload_dialog_photo">Upload Photo</string>
    <string name="upload_dialog_cancel">Cancel</string>
    <string name="upload_dialog_title">Add Photo!</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_upload_picture">Error occurred while uploading profile picture</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_getting">Getting…</string>
    <string name="message_turn_on_internet">Turn on internet connection</string>
    <string name="toolbar_design1">D E S I G N  - I</string>
    <string name="subtitle_name">Subtitle name</string>
    <string name="title_name">Title name</string>
    <string name="attendence_example">Attendance of January</string>
    <string name="progress_updating">Updating…</string>
    <string name="message_data_save_success">Data saved successfully…</string>
    <string name="message_minimum_requirement">Atleast one requirement is mendatory</string>
    <string name="message_image_upload_success">Uploading done successfully</string>
    <string name="message_image_upload_error">Error in uploading</string>
    <string name="message_please_try_later">Please try again later</string>
    <string name="category_dialog_title">Add New Categories ?</string>
    <string name="category_dialog_message">" Categories has been added to your app"</string>
    <string name="message_page_already_available">This page already available in App</string>
    <string name="toolbar_design2" translatable="false">D E S I G N  -  I I</string>
    <string name="message_appname_not_empty">App name should not be empty</string>
    <string name="color_dialog_title">Choose your Color</string>
    <string name="toolbar_draftapps" translatable="false">D R A F T  A P P S</string>
    <string name="not_yet_published">Not yet Published</string>
    <string name="message_app_success_delete">Your app was successfully deleted</string>
    <string name="toolbar_dahsboard">D A S H B O A R D</string>
    <string name="toolbar_myapps" translatable="false">M Y  A P P S</string>
    <string name="last_update_concate">Last Update :</string>
    <string name="referid_concate">"REFER ID: "</string>
    <string name="upgrade_dialog_title">Plan Expiration Notice !</string>
    <string name="myapps_left_concat">"Your app named "</string>
    <string name="myapps_right_concat">" was expired. Immediately renew the plan to edit your apps and publishing."</string>
    <string name="switch2a_hint" translatable="false">Contact name</string>
    <string name="switch2b_hint" translatable="false">Calling detail</string>
    <string name="switch2c_hint" translatable="false">SMS details</string>
    <string name="switch2d_hint" translatable="false">Email</string>
    <string name="switch2e_hint" translatable="false">Skype details</string>
    <string name="switch2f_hint" translatable="false">Address details</string>
    <string name="switch2g_hint" translatable="false">Website url</string>
    <string name="free_trial1day">1 day trial - free</string>
    <string name="nav_rateus" translatable="false">Rate us</string>
    <string name="nav_tutorial" translatable="false">Tutorial Video</string>
</resources>