<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/contact_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="6dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/frame_backgroung_design"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/contactus_title"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_add_design"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="top|end"
                android:layout_margin="5dp"
                android:src="@drawable/plus" />


        </FrameLayout>

        <LinearLayout
            android:id="@+id/contactus_llout_visibility"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <Switch
                    android:id="@+id/switch_2A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/switch2a_hint"
                    android:textColorHint="#ffffff"
                    android:layout_gravity="start|center_vertical"
                    android:backgroundTint="@color/white"
                    android:checked="false"
                    android:foregroundTint="@color/white" />


                <EditText
                    android:id="@+id/edt2A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#ffffff"
                    android:textSize="14sp"
                    android:drawableLeft="@drawable/name"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:hint="@string/edt2a_hint"
                    android:inputType="textCapWords"
                    android:maxLength="15"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/white"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <Switch
                    android:id="@+id/switch_2B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:textColorHint="#ffffff"
                    android:hint="@string/switch2b_hint"
                    android:backgroundTint="@color/white"
                    android:checked="false"
                    android:foregroundTint="@color/white" />


                <EditText
                    android:id="@+id/edt2B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#ffffff"
                    android:drawableLeft="@drawable/call"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:hint="@string/edt2b_hint"
                    android:inputType="number"
                    android:maxLength="15"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/white"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <Switch
                    android:id="@+id/switch_2C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="#ffffff"
                    android:hint="@string/switch2c_hint"
                    android:layout_gravity="left|center_vertical"
                    android:backgroundTint="@color/white"
                    android:checked="false"
                    android:foregroundTint="@color/white" />


                <EditText
                    android:id="@+id/edt2C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#ffffff"
                    android:drawableLeft="@drawable/sms"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:hint="@string/edt2c_hint"
                    android:inputType="number"
                    android:maxLength="15"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/white"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <Switch
                    android:id="@+id/switch_2D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/switch2d_hint"
                    android:textColorHint="#ffffff"
                    android:layout_gravity="start|center_vertical"
                    android:backgroundTint="@color/white"
                    android:checked="false"
                    android:foregroundTint="@color/white" />


                <EditText
                    android:id="@+id/edt2D"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#ffffff"
                    android:drawableLeft="@drawable/mail"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:hint="@string/edt2d_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/white"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <Switch
                    android:id="@+id/switch_2E"
                    android:layout_width="wrap_content"
                    android:hint="@string/switch2e_hint"
                    android:textColorHint="#ffffff"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:backgroundTint="@color/white"
                    android:checked="false"
                    android:foregroundTint="@color/white" />


                <EditText
                    android:id="@+id/edt2E"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#ffffff"
                    android:drawableLeft="@drawable/skype"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:hint="@string/edt2e_hint"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/white"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <Switch
                    android:id="@+id/switch_2F"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/switch2f_hint"
                    android:textColorHint="#ffffff"
                    android:layout_gravity="left|center_vertical"
                    android:backgroundTint="@color/white"
                    android:checked="false"
                    android:foregroundTint="@color/white" />


                <EditText
                    android:id="@+id/edt2F"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#ffffff"
                    android:drawableLeft="@drawable/address"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:hint="@string/edt2f_hint"
                    android:inputType="text"
                    android:lines="2"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/white"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <Switch
                    android:id="@+id/switch_2G"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/switch2g_hint"
                    android:textColorHint="#ffffff"
                    android:layout_gravity="left|center_vertical"
                    android:backgroundTint="@color/white"
                    android:checked="false"
                    android:foregroundTint="@color/white" />


                <EditText
                    android:id="@+id/edt2G"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#ffffff"
                    android:drawableLeft="@drawable/website"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:hint="@string/edt2g_hint"
                    android:inputType="text"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/white"
                    android:visibility="gone" />

            </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/img_delete_design"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="bottom|end"
                android:layout_margin="5dp"
                android:src="@drawable/delete_white" />

        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>